# innova_content

./: .env.example  .gitignore  DEPLOY-INNOVAAPPS.md  PRD  README.md  docker-compose.yml  package.json
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260615_0001_initial.py  20260616_0002_campaign_media.py
apps/api/app/: main.py  security.py
apps/api/app/config/: settings.py
apps/api/app/database/: connection.py
apps/api/app/graph/: content_graph.py  content_state.py
apps/api/app/graph/nodes/: common.py  content_summarizer.py  database_persistor.py  hashtag_generator.py  input_validator.py  instagram_generator.py  key_points_extractor.py  linkedin_generator.py  quality_reviewer.py  strategy_planner.py  youtube_generator.py
apps/api/app/models/: __init__.py  models.py
apps/api/app/routes/: asset_routes.py  auth_routes.py  campaign_routes.py  media_routes.py
apps/api/app/schemas/: auth.py  campaign.py
apps/api/app/services/: campaign_service.py  image_service.py  llm_service.py
apps/api/tests/: conftest.py  test_campaign_flow.py
apps/web/: Dockerfile  package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/app/campaigns/: page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/components/: app-shell.tsx  asset-editor.tsx  social-image-panel.tsx  status-badge.tsx  ui.tsx
apps/web/src/lib/: api.ts
apps/web/src/types/: campaign.ts
scripts/: install-innovaapps.ps1  package-deployment.ps1
(+3 files in other folders)
