[project]
name = "innova-content-agent-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.128.0",
  "uvicorn[standard]>=0.34,<1",
  "sqlalchemy>=2.0.41,<3",
  "alembic>=1.16,<2",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.9,<3",
  "pyjwt>=2.10,<3",
  "pwdlib[argon2]>=0.2,<1",
  "python-multipart>=0.0.20,<1",
  "email-validator>=2.2,<3",
  "langgraph==1.0.8",
  "openai>=1.90,<3"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.4,<9",
  "ruff>=0.12,<1"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.setuptools.packages.find]
include = ["app*"]
